--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask
-httplib2
-json
-oauth2client
-requests
-sqlalchemy
-flask_httpauth
-passlib
+Flask >= 1.0.2
+httplib2 >= 0.11.3
+oauth2client >= 4.1.2
+requests >= 2.18.4
+sqlalchemy >= 1.2.7
+flask_httpauth >= v3.2.3
+passlib >= 1.7.1
+itsdangerous >= 0.24
