--- a/app/static/package.json
+++ b/app/static/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/momotofu/catalog#readme",
   "dependencies": {
     "jquery": "^3.3.1",
+    "knockout": "^3.4.2",
     "npm": "^5.8.0"
   }
 }
