--- a/app/static/package.json
+++ b/app/static/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
     "knockout": "^3.4.2",
+    "knockout-postbox": "^0.6.0",
     "npm": "^5.8.0"
   }
 }
