--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
+    "ignore-loader": "^0.1.2",
     "mini-css-extract-plugin": "^0.4.0",
     "webpack-cli": "^2.1.3"
   }
