--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/momotofu/catalog#readme",
   "dependencies": {
+    "babel-loader": "^7.1.4",
     "bootstrap": "^4.1.1",
     "css-loader": "^0.28.11",
     "image-webpack-loader": "^4.2.0",
@@ -26,8 +27,8 @@
     "knockout-postbox": "^0.6.0",
     "manifest-revision-webpack-plugin": "^0.4.1",
     "npm": "^5.8.0",
-    "script-loader": "^0.7.2",
     "style-loader": "^0.21.0",
+    "time-fix-plugin": "^2.0.1",
     "webpack": "^4.8.3",
     "webpack-dev-server": "^3.1.4"
   },
