--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "ignore-loader": "^0.1.2",
     "mini-css-extract-plugin": "^0.4.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-cli": "^2.1.3"
   }
 }
