--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
+    "file-loader": "^1.1.11",
     "ignore-loader": "^0.1.2",
     "mini-css-extract-plugin": "^0.4.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^2.1.4"
   }
 }
