--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "file-loader": "^1.1.11",
     "ignore-loader": "^0.1.2",
     "mini-css-extract-plugin": "^0.4.0",
+    "popper.js": "^1.14.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-cli": "^2.1.4"
   }
