installed font-awesome

--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "babel-loader": "^7.1.4",
     "bootstrap": "^4.1.1",
     "css-loader": "^0.28.11",
-    "image-webpack-loader": "^4.2.0",
+    "font-awesome": "^4.7.0",
+    "image-webpack-loader": "^4.3.0",
     "jquery": "^3.3.1",
     "knockout": "^3.4.2",
     "manifest-revision-webpack-plugin": "^0.4.1",
-    "npm": "^5.8.0",
+    "npm": "^6.1.0",
     "style-loader": "^0.21.0",
+    "sync-exec": "^0.6.2",
     "time-fix-plugin": "^2.0.1",
-    "webpack": "^4.8.3",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.11.1",
     "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
