updated font-awesome to @fortawesome

--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/momotofu/catalog#readme",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "babel-loader": "^7.1.4",
     "bootstrap": "^4.1.1",
     "css-loader": "^0.28.11",
-    "font-awesome": "^4.7.0",
     "image-webpack-loader": "^4.3.0",
     "jquery": "^3.3.1",
     "knockout": "^3.4.2",
